--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head> 
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet" />
+    <title>EllinhaRaps</title>
+</head>
 <body>
-    
+    <header>ELLINHARAPS</header>
+    <section class="chamada">
+        <div class="chamada-texto">
+            <h1>DUELO DE TITÃS: FINN VS GUMBALL</h1>
+            <p>#7minutoz</p>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/UVLjvpV2Pxc?si=rJDV7pivRDnXqmof"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
+        </div>
+    </section>
+    <!-- código omitido -->
+    <section class="categoria">
+        <h2>Veja mais raps aqui!</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=6Q8svKIi2N4">
+                <img src="https://img.youtube.com/vi/6Q8svKIi2N4/sddefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=W8dWDjwkMDw">
+                <img src="https://img.youtube.com/vi/W8dWDjwkMDw/sddefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=zs_zpMnwNMs">
+                <img src="https://img.youtube.com/vi/zs_zpMnwNMs/sddefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=YYA-0j8JyTg">
+                <img src="https://img.youtube.com/vi/YYA-0j8JyTg/sddefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=CFjxhsoR278">
+                <img src="https://img.youtube.com/vi/CFjxhsoR278/sddefault.jpg" />
+            </a>
+        </div>
+    </section>
+    <!-- código omitido -->
 </body>
 </html>
